--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "tv",
     "private": true,
-    "version": "1.0.0",
+    "version": "1.0.1",
     "type": "module",
     "scripts": {
         "dev": "vite",
@@ -12,6 +12,7 @@
         "vue": "^3.2.37"
     },
     "devDependencies": {
+        "@types/css-font-loading-module": "^0.0.11",
         "@types/node": "^18.7.14",
         "@vitejs/plugin-vue": "^3.0.3",
         "sass": "^1.54.7",
