--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "tv",
     "private": true,
-    "version": "1.0.2",
+    "version": "1.0.3",
     "type": "module",
     "scripts": {
         "dev": "vite",
@@ -9,10 +9,16 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "acorn": "^8.11.2",
+        "acorn-walk": "^8.3.0",
+        "css-tree": "^2.3.1",
+        "escodegen": "^2.1.0",
         "vue": "^3.2.37"
     },
     "devDependencies": {
         "@types/css-font-loading-module": "^0.0.11",
+        "@types/css-tree": "^2.3.4",
+        "@types/escodegen": "^0.0.10",
         "@types/node": "^18.7.14",
         "@vitejs/plugin-vue": "^3.0.3",
         "sass": "^1.54.7",
