--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "tv",
     "private": true,
-    "version": "1.0.3",
+    "version": "1.0.4",
     "type": "module",
     "scripts": {
         "dev": "vite",
@@ -13,12 +13,14 @@
         "acorn-walk": "^8.3.0",
         "css-tree": "^2.3.1",
         "escodegen": "^2.1.0",
+        "lodash": "^4.17.21",
         "vue": "^3.2.37"
     },
     "devDependencies": {
         "@types/css-font-loading-module": "^0.0.11",
         "@types/css-tree": "^2.3.4",
         "@types/escodegen": "^0.0.10",
+        "@types/lodash": "^4.14.202",
         "@types/node": "^18.7.14",
         "@vitejs/plugin-vue": "^3.0.3",
         "sass": "^1.54.7",
